Manual de la PAJG

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,17 @@ import Feature from '../components/Feature.astro'
         <Feature icon="mdi:folder" title="Plataforma Web">
           <p>
             Descargar recibos de nómina, crear tickets de soporte técnico
-            y administrar la documentación pública.
-            Debe contar con una cuenta institucional
-            coahuila.gob.mx o pjecz.gob.mx.
+            y administrar los documentos que se publican en el sitio web.
           </p>
           <a class="button m-2" href="https://plataforma-web.justiciadigital.gob.mx/" target="_blank">Ir a Plataforma Web</a>
-          <a class="button m-2" href="/plataforma_web">Manuales de Plataforma Web</a>
+          <a class="button m-2" href="/plataforma_web">Manuales</a>
+        </Feature>
+        <Feature icon="mdi:folder" title="Plataforma Archivo Judicial General">
+          <p>
+            Consulta de documentos y entrega de remesas al Archivo Judicial General.
+          </p>
+          <a class="button m-2" href="https://archivo-judicial-general.justiciadigital.gob.mx/" target="_blank">Ir a Plataforma Archivo Judicial General</a>
+          <a class="button m-2" href="/plataforma_archivo_judicial_general">Manuales</a>
         </Feature>
         <Feature icon="mdi:folder" title="Portal de Notarías">
           <p>
@@ -26,7 +31,7 @@ import Feature from '../components/Feature.astro'
             sitio web del Poder Judicial del Estado de Coahuila de Zaragoza.
           </p>
           <a class="button m-2" href="https://notarias.justiciadigital.gob.mx/" target="_blank">Ir al Portal de Notarías</a>
-          <a class="button m-2" href="/portal_notarias">Manuales del Portal de Notarías</a>
+          <a class="button m-2" href="/portal_notarias">Manuales</a>
         </Feature>
         <Feature icon="mdi:folder" title="Sistema de Citas">
           <p>
