--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,6 +20,9 @@ import { Icon } from 'astro-icon/components'
           <a href="https://plataforma-web.justiciadigital.gob.mx/" target="_blank">Plataforma Web</a>
         </li>
         <li class="submenu-item">
+          <a href="https://archivo-judicial-general.justiciadigital.gob.mx/" target="_blank">Plataforma Archivo Judicial General</a>
+        </li>
+        <li class="submenu-item">
           <a href="https://notarias.justiciadigital.gob.mx/" target="_blank">Portal de Notarías</a>
         </li>
         <li class="submenu-item">
